--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="gray">#808080</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="f">#00ff0000</color>
+    <color name="transparent">#00ff0000</color>
 </resources>
