add viewPager for slide card

--- a/app/src/main/res/drawable/tv_card.xml
+++ b/app/src/main/res/drawable/tv_card.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <gradient
+    <!--<gradient
         android:startColor="#FDEBF7"
         android:centerColor="#FFFFFF"
         android:endColor="#FDEBF7"
-        android:angle="90"/>
+        android:angle="90"/>-->
+
+    <solid
+        android:color="#FFFFFF"/>
 
     <stroke
         android:width="2dp"
         android:color="#C0C0C0"/>
 
     <corners
-        android:topLeftRadius="100dp"
-        android:topRightRadius="100dp"
-        android:bottomLeftRadius="100dp"
-        android:bottomRightRadius="100dp"/>
+        android:topLeftRadius="70dp"
+        android:topRightRadius="70dp"
+        android:bottomLeftRadius="70dp"
+        android:bottomRightRadius="70dp"/>
 
 </shape>
