--- a/app/src/main/res/layout/fragment_card_back.xml
+++ b/app/src/main/res/layout/fragment_card_back.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/tv_card">
 
     <TextView
         android:id="@+id/card"
