--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -72,8 +72,7 @@
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         app:layout_constraintBottom_toBottomOf="@+id/guideline_card_bottom"
-        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom"
-        android:background="@drawable/tv_card"/>
+        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom"/>
 
     <LinearLayout
         android:layout_width="0dp"
