--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".StudyFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_left"
@@ -47,10 +48,12 @@
             android:layout_height="match_parent"
             android:autoSizeTextType="uniform"
             android:autoSizeMinTextSize="10sp"
-            android:autoSizeMaxTextSize="50sp"
+            android:autoSizeMaxTextSize="40sp"
             android:autoSizeStepGranularity="2sp"
             android:gravity="center"
-            android:text="DAY n 공부"/>
+            android:text="DAY n 공부"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -65,14 +68,14 @@
         android:background="@drawable/tv_card">
     </FrameLayout>-->
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/card_frameLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
         app:layout_constraintBottom_toBottomOf="@+id/guideline_card_bottom"
-        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom"/>
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom" />
 
     <LinearLayout
         android:layout_width="0dp"
