--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -54,19 +54,7 @@
             android:text="DAY n 공부"
             android:textColor="@color/black"
             android:textStyle="bold"/>
-
     </LinearLayout>
-
-    <!--<FrameLayout
-        android:id="@+id/card_frameLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline_card_bottom"
-        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom"
-        android:background="@drawable/tv_card">
-    </FrameLayout>-->
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/card_frameLayout"
@@ -77,43 +65,72 @@
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom" />
 
+    <FrameLayout
+        android:id="@+id/card_frame"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline_card_bottom"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom"/>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline_card_bottom">
+        app:layout_constraintTop_toTopOf="@id/guideline_card_bottom"
+        android:weightSum="10">
 
-        <!--<TextView
-            android:id="@+id/already_know_word"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="25sp"
+        <ToggleButton
+            android:id="@+id/reverse_btn"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:layout_marginHorizontal="40dp"
+            android:layout_gravity="center"
+            android:background="@color/transparent"
+            android:textOn="앞면 보기"
+            android:textOff="뒷면 보기"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:autoSizeTextType="uniform"
-            android:autoSizeMaxTextSize="25sp"
-            android:autoSizeMinTextSize="10sp"
-            android:autoSizeStepGranularity="2sp"
-            android:layout_weight="5"
-            android:gravity="center"
-            android:text="모르는 단어\nn개"/>
+            android:autoSizeMaxTextSize="20sp"
+            android:autoSizeMinTextSize="18sp">
+        </ToggleButton>
 
-        <TextView
-            android:id="@+id/unknown_word"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="25sp"
-            android:autoSizeTextType="uniform"
-            android:autoSizeMaxTextSize="25sp"
-            android:autoSizeMinTextSize="10sp"
-            android:autoSizeStepGranularity="2sp"
-            android:layout_weight="5"
-            android:gravity="center"
-            android:text="아는 단어\nn개"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/already_know_word"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="25sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeStepGranularity="2sp"
+                android:layout_weight="5"
+                android:gravity="center" >
+            </TextView>
 
-
+            <TextView
+                android:id="@+id/unknown_word"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="25sp"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeStepGranularity="2sp"
+                android:layout_weight="5"
+                android:gravity="center" >
+            </TextView>
+        </LinearLayout>
     </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
