--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -172,6 +172,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/box_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/guideline_Tgap_bottom"
@@ -212,6 +213,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/test_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/guideline_Tgap_bottom"
@@ -252,6 +254,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/setting_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/guideline_Tgap_bottom"
@@ -260,9 +263,11 @@
         app:layout_constraintStart_toStartOf="@id/guideline_Rgap_right"
         android:background="@drawable/rounding_rect"
         android:orientation="vertical"
-        android:weightSum="2">
+        android:weightSum="2"
+        android:onClick="MoveSetting">
 
         <TextView
+            android:id="@+id/name_tv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="15dp"
