--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -266,34 +266,12 @@
         android:weightSum="2"
         android:onClick="MoveSetting">
 
-        <TextView
-            android:id="@+id/name_tv"
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:text="(닉네임) 님"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:autoSizeTextType="uniform"
-            android:layout_gravity="center"
-            android:gravity="center">
-        </TextView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:text="환영합니다."
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:autoSizeTextType="uniform"
-            android:layout_gravity="center"
-            android:gravity="center">
-        </TextView>
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:src="@drawable/baseline_settings_black_48"/>
     </LinearLayout>
 
     <LinearLayout
