--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -9,28 +9,49 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.02" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.12" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.14" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_fourth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.24" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_fifth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.26" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_sixth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.36" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_first">
+        app:layout_constraintTop_toTopOf="@id/guideline_first"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_second">
 
         <TextView
             android:id="@+id/edit_mem_info"
@@ -42,6 +63,8 @@
             android:autoSizeStepGranularity="2sp"
             android:gravity="center|left"
             android:text="회원정보 수정"
+            android:textStyle="bold"
+            android:paddingStart="40dp"
             android:textColor="@color/black"
             android:background="@drawable/tv_underline"/>
     </LinearLayout>
@@ -50,8 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/guideline_first"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_second">
+        app:layout_constraintTop_toTopOf="@id/guideline_third"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_fourth">
 
         <TextView
             android:id="@+id/reset_target"
@@ -63,6 +86,8 @@
             android:autoSizeStepGranularity="2sp"
             android:gravity="center|left"
             android:text="목표치 재설정"
+            android:textStyle="bold"
+            android:paddingStart="40dp"
             android:textColor="@color/black"
             android:background="@drawable/tv_underline"/>
     </LinearLayout>
@@ -71,8 +96,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/guideline_second"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_third">
+        app:layout_constraintTop_toTopOf="@id/guideline_fifth"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_sixth">
 
         <TextView
             android:id="@+id/cycle_reset"
@@ -84,6 +109,8 @@
             android:autoSizeStepGranularity="2sp"
             android:gravity="center|left"
             android:text="반복 주기 재설정"
+            android:textStyle="bold"
+            android:paddingStart="40dp"
             android:textColor="@color/black"
             android:background="@drawable/tv_underline"/>
     </LinearLayout>
