--- a/app/src/main/res/layout/item_card_list.xml
+++ b/app/src/main/res/layout/item_card_list.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         android:orientation="horizontal"
-        android:weightSum="10">
+        android:weightSum="10"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/tv_num"
